--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -3,9 +3,6 @@
     <div class="col-1"></div>
     <div class="titles col-3">Proyectos:</div>
     <div class="col-6"></div>
-    <div class="col-1">
-      <i class="bi bi-plus-lg float-end social px-1"></i>
-    </div>
   </div>
   <div class="row align-items-top">
     <div class="col-1"></div>
@@ -20,9 +17,23 @@
     </div>
     <!-- <div class="col-7 smallest">{{ experience.title }}</div> -->
     <div class="col-6">TODO</div>
-    <div class="col-1">
-      <i class="bi bi-trash float-end social px-1"></i>
-      <i class="bi bi-pencil-fill float-end social px-1"></i>
+    <div class="col">
+      <button *ngIf="isLogged" type="button" id="grouped" class="edit">
+        <i class="bi bi-trash float-end social px-1"></i>
+      </button>
+      <button
+        *ngIf="isLogged"
+        type="button"
+        class="edit"
+        id="grouped"
+        data-bs-toggle="modal"
+        data-bs-target="#educationModal"
+      >
+        <i class="bi bi-pencil-fill float-end social px-1"></i>
+      </button>
+      <button *ngIf="isLogged" type="button" class="edit">
+        <i class="bi bi-plus-lg float-end social px-1"></i>
+      </button>
     </div>
     <!-- </div> -->
   </div>
