--- a/portfolio/src/app/components/skill/skill.component.html
+++ b/portfolio/src/app/components/skill/skill.component.html
@@ -4,7 +4,9 @@
     <div class="titles col-3">Hard & Soft Skills:</div>
     <div class="col-6"></div>
     <div class="col-1">
-      <i class="bi bi-plus-lg float-end social px-1"></i>
+      <button *ngIf="isLogged" type="button" class="edit">
+        <i class="bi bi-plus-lg float-end social px-1"></i>
+      </button>
     </div>
   </div>
   <div class="row align-items-top">
@@ -50,22 +52,52 @@
           <td>
             <div class="skill">
               Python
-              <i class="bi bi-pencil-fill social-skill px-1"></i>
-              <i class="bi bi-trash social-skill px-1"></i>
+              <button
+                *ngIf="isLogged"
+                type="button"
+                class="edit-social"
+                data-bs-toggle="modal"
+                data-bs-target="#educationModal"
+              >
+                <i class="bi bi-pencil-fill social-skill px-1"></i>
+              </button>
+              <button *ngIf="isLogged" type="button" class="edit-social">
+                <i class="bi bi-trash social-skill px-1"></i>
+              </button>
             </div>
           </td>
           <td>
             <div class="skill">
               Python
-              <i class="bi bi-pencil-fill social-skill px-1"></i>
-              <i class="bi bi-trash social-skill px-1"></i>
+              <button
+                *ngIf="isLogged"
+                type="button"
+                class="edit-social"
+                data-bs-toggle="modal"
+                data-bs-target="#educationModal"
+              >
+                <i class="bi bi-pencil-fill social-skill px-1"></i>
+              </button>
+              <button *ngIf="isLogged" type="button" class="edit-social">
+                <i class="bi bi-trash social-skill px-1"></i>
+              </button>
             </div>
           </td>
           <td>
             <div class="skill">
               Python
-              <i class="bi bi-pencil-fill social-skill px-1"></i>
-              <i class="bi bi-trash social-skill px-1"></i>
+              <button
+                *ngIf="isLogged"
+                type="button"
+                class="edit-social"
+                data-bs-toggle="modal"
+                data-bs-target="#educationModal"
+              >
+                <i class="bi bi-pencil-fill social-skill px-1"></i>
+              </button>
+              <button *ngIf="isLogged" type="button" class="edit-social">
+                <i class="bi bi-trash social-skill px-1"></i>
+              </button>
             </div>
           </td>
         </tr>
